Fixed button text align for mobile width. Fixed all-products carte. 2 extra buttons => 2 extra links

--- a/source/sass/blocks/_button.scss
+++ b/source/sass/blocks/_button.scss
@@ -11,6 +11,7 @@ $font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   background-color: $green;
   border: none;
+  text-align: center;
   text-decoration: none;
 
   @media (min-width: $tablet-width) {
